Fix code background in dark mode

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -25,6 +25,14 @@ layout: null
     --footer-link-col: {{ site.footer-link-col | default: "#404040" }};
     --footer-hover-col: {{ site.footer-hover-col | default: "#0085A1" }};
   }
+  .highlight > pre {
+  background-image: linear-gradient(
+    rgba(0,0,0,0.03), rgba(0,0,0,0.03) 1.5em, rgba(0,0,0,0.02) 1.5em, rgba(0,0,0,0.02) 3em);
+  background-size: auto 3em;
+  background-position-y: 0.625rem;
+  border: 1px solid rgba(0,0,0,0.1);
+  border-left: 0.4375rem solid #444;
+}
 }
 
 @media (prefers-color-scheme: dark) {
@@ -41,6 +49,14 @@ layout: null
     --footer-link-col: {{ site.dark-footer-link-col | default: "#404040" }};
     --footer-hover-col: {{ site.dark-footer-hover-col | default: "#0085A1" }};
   }
+  .highlight > pre {
+  background-image: linear-gradient(
+    rgba(255,255,255,0.03), rgba(255,255,255,0.03) 1.5em, rgba(255,255,255,0.02) 1.5em, rgba(255,255,255,0.02) 3em);
+  background-size: auto 3em;
+  background-position-y: 0.625rem;
+  border: 1px solid rgba(0,0,0,0.1);
+  border-left: 0.4375rem solid #444;
+}
 }
 /* --- General --- */
 
@@ -904,14 +920,7 @@ pre {
   background: none;
   margin: 0;
 }
-.highlight > pre {
-  background-image: linear-gradient(
-    rgba(0,0,0,0.03), rgba(0,0,0,0.03) 1.5em, rgba(0,0,0,0.02) 1.5em, rgba(0,0,0,0.02) 3em);
-  background-size: auto 3em;
-  background-position-y: 0.625rem;
-  border: 1px solid rgba(0,0,0,0.1);
-  border-left: 0.4375rem solid #444;
-}
+
 .highlight > pre:not([class~="highlight"]) { /* code block with line number */
   padding: 0;
 }
